--- a/onlinepdf.html
+++ b/onlinepdf.html
@@ -129,7 +129,7 @@ document.addEventListener('contextmenu', function (e) {
   }
 
   // Example: Send form data to the server using fetch
-  fetch('https://formspree.io/f/xkgwllvj', {
+  fetch('https://submit-form.com/dVTdV7rpu', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/x-www-form-urlencoded',
